Fix style to remove scrollbar

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body{
 }
 
 .content {
-    height: 100vh;
 
     display: flex;
     justify-content: center;
